# dash-annotate

./: README.md  pyproject.toml
examples/: aio_usage.py  basic_usage.py  example_full_screen.py
scratch/: annotated_text.py  app.py
src/dash_annotator/: __init__.py  annotator.py  models.py
src/dash_annotator/assets/: clientside copy.js  clientside.js
src/dash_annotator/components/: __init__.py  _ids.py  annotate_button.py  annotations.py  annotator.py  base.py  base_v1.py  button.py  text_annotator.py
