[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-annotator"
dynamic = ["version"]
description = "A Dash component for interactive text annotation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["dash", "plotly", "annotation", "text"]
authors = [{ name = "Yasas" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Dash",
]
dependencies = ["dash>=2.0.0", "dash-extensions>=0.1.0"]

[project.urls]
Documentation = "https://github.com/ysenarath/dash-annotator#readme"
Issues = "https://github.com/ysenarath/dash-annotator/issues"
Source = "https://github.com/ysenarath/dash-annotator"

[tool.hatch.version]
path = "src/dash_annotator/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/src/dash_annotator"]

[tool.hatch.build.targets.wheel]
packages = ["src/dash_annotator"]
